--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -5,7 +5,7 @@ jobs :
     runs-on : ubuntu-latest
     steps:
       - name: Print Greeting
-        run : "Hellow World"
+        run : echo "Hello World"
       - name : Say GoodBye
-        run : "Good Bye"
+        run : echo "Good Bye"
       
