--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -12,4 +12,6 @@ jobs :
         run : echo "Good Bye"
       - name : checkout_code
         uses : actions/checkout@v4
+        with :
+          path : my_code
       
